[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plotter"
version = "0.1.0"
description = "A library for plotting time-series and categorical data"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=1.23.0",
    "arviz>=0.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
